# my_manim

./: .gitignore  LICENSE  README.md  build.sh  pyproject.toml
src/auc/: auc_visualization.py
src/auc/utils/: dummy_data.py
src/handson/: animated_square_to_circle.py  circle.py  different_rotations.py  square_to_circle.py
src/roc_auc/: auc2.py  auc_visualization.py
