[project]
name = "my-manim"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shinichi Kanehira", email = "skanehir1126@gmail.com" }
]
dependencies = [
    "manim>=0.18.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_manim"]
